CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(WEBSLINGER)


IF(NOT GLUT_LIBRARIES)
FIND_PACKAGE(GLUT)
ENDIF(NOT GLUT_LIBRARIES)

IF(NOT OPENGL_LIBRARIES)
FIND_PACKAGE(OPENGL)
ENDIF(NOT OPENGL_LIBRARIES)

SET(SRC_C
	graphics.c
	massmesh.c
	webslinger.c
)

SET(HEADERS
	graphics.h
	massmesh.h
)


SET(APP_NAME "webslinger")

IF(APPLE)
SET_SOURCE_FILES_PROPERTIES(${SRC_C} PROPERTIES LANGUAGE CXX)
add_executable(${APP_NAME}
	${SRC_C}
	${HEADERS}
)
target_link_libraries( ${APP_NAME}
	${OPENGL_LIBRARIES}
	${GLUT_LIBRARIES}
)

#SET(CPACK_GENERATOR DragNDrop)
#INSTALL(TARGETS ${APP_NAME} BUNDLE DESTINATION . COMPONENT Runtime)
#INSTALL(CODE "
#	include(BundleUtilities)
#	fixup_bundle( \"${CMAKE_BINARY_DIR}/${APP_NAME}.app\" \"\" \"\" )
#          " COMPONENT Runtime )
ENDIF(APPLE)

INCLUDE(CPACK)